@@ -1,9 +1,22 @@
-package org.jabref.generators;
+///usr/bin/env jbang "$0" "$@" ; exit $?
+
+//JAVA 24
+//RUNTIME_OPTIONS --enable-native-access=ALL-UNNAMED
+
+//DEPS com.fasterxml.jackson.core:jackson-databind:2.17.1
+//DEPS org.slf4j:slf4j-api:2.0.13
+//DEPS org.slf4j:slf4j-simple:2.0.13
+
+//SOURCES ../../../../jablib/src/main/java/org/jabref/architecture/AllowedToUseClassGetResource.java
+//SOURCES ../../../../jablib/src/main/java/org/jabref/logic/citationstyle/CSLStyleUtils.java
+//SOURCES ../../../../jablib/src/main/java/org/jabref/logic/citationstyle/CitationStyle.java
+//SOURCES ../../../../jablib/src/main/java/org/jabref/logic/openoffice/style/OOStyle.java
+//SOURCES ../../../../jablib/src/main/java/org/jabref/logic/util/FileType.java
+//SOURCES ../../../../jablib/src/main/java/org/jabref/logic/util/StandardFileType.java
+//SOURCES ../../../../jablib/src/main/java/org/jabref/logic/util/UnknownFileType.java
+//SOURCES ../../../../jablib/src/main/java/org/jabref/model/util/OptionalUtil.java
 
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.HashMap;
@@ -20,15 +33,15 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/**
- * Generates a catalog of CSL styles internally supported by JabRef.
- * The catalog contains the list of styles, along with some pre-computed metadata (e.g. numeric nature).
- * This class is intended to be used for the corresponding build-time task.
- */
+/// Generates a catalog of CSL styles internally supported by JabRef.
+/// The catalog contains the list of styles, along with some pre-computed metadata (e.g. numeric nature).
+/// This class is intended to be used for the corresponding build-time task.
+///
+/// Has to be started in the root of the repository due to <https://github.com/jbangdev/jbang-gradle-plugin/issues/11>
 @AllowedToUseClassGetResource("Required for loading internal CSL styles")
 public class CitationStyleCatalogGenerator {
-    private static final String STYLES_ROOT = "/csl-styles";
-    private static final String CATALOG_PATH = "build/resources/main/citation-style-catalog.json";
+    private static final Path STYLES_ROOT = Path.of("jablib/src/main/resources/csl-styles");
+    private static final String CATALOG_PATH = "jablib/build/generated/resources/citation-style-catalog.json";
     private static final String DEFAULT_STYLE = "ieee.csl";
 
     private static final Logger LOGGER = LoggerFactory.getLogger(CitationStyleCatalogGenerator.class);
@@ -39,25 +52,22 @@ public class CitationStyleCatalogGenerator {
 
     public static void generateCitationStyleCatalog() {
         try {
-            URL url = CitationStyleCatalogGenerator.class.getResource(STYLES_ROOT + "/" + DEFAULT_STYLE);
-            if (url == null) {
+            if (!Files.exists(STYLES_ROOT.resolve(DEFAULT_STYLE))) {
                 LOGGER.error("Could not find any citation style. Tried with {}.", DEFAULT_STYLE);
                 return;
             }
 
-            URI uri = url.toURI();
-            Path stylesDirectory = Path.of(uri).getParent();
-            List<CitationStyle> styles = discoverStyles(stylesDirectory);
+            List<CitationStyle> styles = discoverStyles(STYLES_ROOT);
 
             generateCatalog(styles);
-        } catch (URISyntaxException | IOException e) {
+        } catch (IOException e) {
             LOGGER.error("Error generating citation style catalog", e);
         }
     }
 
     private static List<CitationStyle> discoverStyles(Path path) throws IOException {
         try (Stream<Path> stream = Files.find(path, 1, (file, _) -> file.toString().endsWith("csl"))) {
-            return stream.map(Path::getFileName)
+            return stream.map(Path::toAbsolutePath)
                          .map(Path::toString)
                          .map(CSLStyleUtils::createCitationStyleFromFile)
                          .flatMap(Optional::stream)
@@ -73,7 +83,9 @@ public class CitationStyleCatalogGenerator {
         List<Map<String, Object>> styleInfoList = styles.stream()
                                                         .map(style -> {
                                                             Map<String, Object> info = new HashMap<>();
-                                                            info.put("path", style.getFilePath());
+                                                            Path stylePath = Path.of(style.getFilePath());
+                                                            Path relativePath = STYLES_ROOT.toAbsolutePath().relativize(stylePath.toAbsolutePath());
+                                                            info.put("path", relativePath.toString());
                                                             info.put("title", style.getTitle());
                                                             info.put("isNumeric", style.isNumericStyle());
                                                             info.put("hasBibliography", style.hasBibliography());
